k8s/deployments.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: online-shop-dp
  namespace: online-shop-ns
  labels:
    app: online-shop

spec:
  replicas: 2
  selector:
    matchLabels:
      app: online-shop

  template:
    metadata:
      labels:
        app: online-shop

    spec:
      containers:
      - name: online-shop
        image: vradhi108/online-shopping:latest
        ports:
        - containerPort: 3000
