k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: online-shop-service
  namespace: online-shop-ns

spec:
  selector:
    app: online-shop

  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
